tests/snapshots/tests__arg__action_append.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_flag=('value1' 'value2')
