tests/snapshots/tests__arg__action_version.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_bdec613a'
prog 1.0.0
EOF_bdec613a
exit 0
