tests/snapshots/tests__arg__default_value_if_equals-1.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_opt='special'
claptrap_other='default'
