tests/snapshots/tests__arg__default_value_if_present.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_flag='true'
claptrap_other='default'
