tests/snapshots/tests__arg__default_value_ifs_order.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_opt='channel'
claptrap_flag='true'
claptrap_other='default'
