tests/snapshots/tests__arg__default_values-1.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_opt=('myval1' 'myval2')
