tests/snapshots/tests__arg__default_values-2.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_opt=('non_default' 'another_value')
